@@ -1,6 +1,6 @@
-New Features and Important Changes in GammaLib 1.7.3
+New Features and Important Changes in GammaLib 1.7.4
 
-2 December 2020
+24 April 2021
 
 
 1. Introduction
@@ -63,7 +63,9 @@ None
 
 8. Model module
 ---------------
-None
+Speed-up the Monte Carlo sampling of the exponentially cut-off power law
+models GModelSpectralExpPlaw, GModelSpectralExpInvPlaw and
+GModelSpectralSuperExpPlaw (#3625).
 
 
 9. Numerics module
@@ -123,12 +125,7 @@ None
 
 20. CTA interface
 -----------------
-The GCTAModelIrfBackground::eval() method uses now the GCTABackground3D::rate_ebin()
-integrator method instead of the GCTABackground3D::operator() operator so that the
-background model evaluation is no longer sensitive to the number of energy bins.
-The GCTACubeBackground::fill() method was simplified, removing the power law
-integration which was not accurate enough, and using directly the
-GCTAModelIrfBackground::eval() method which is now exact (#3472).
+None
 
 
 21. COMPTEL interface 
